--- a/styles.css
+++ b/styles.css
@@ -12,13 +12,25 @@ body {
   min-height: 100vh;
   background-color: gray;
 }
-
-.container {
-  width: 512px;
-  height: 512px;
-  display: grid;
+/* Using grid layouts */
+/* .container {
+  width: 500px;
+  height: 500px;
+  display: flex;
+  flex-flow
   grid-template-columns: repeat(32, auto);
   grid-template-rows: repeat(32, auto);
+  background-color: white;
+} */
+
+/* Using flex-box */
+.container {
+  width: 500px;
+  height: 500px;
+  position: relative;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
   background-color: white;
 }
 
